--- a/index.html
+++ b/index.html
@@ -15,22 +15,25 @@
 </head>
 <body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
 
-  <!-- Header with logo and title -->
+  <!-- Header with logo, title, and navigation -->
   <header class="p-8 text-center max-w-3xl mx-auto fade-in">
     <img src="/assets/IronDilloLogo.png" alt="IronDillo logo" class="mx-auto mb-6 w-32 h-auto" />
     <h1 class="text-4xl font-extrabold text-teal-400 mb-4">Iron Dillo Cybersecurity</h1>
+    
+    <!-- Navigation right below the title -->
+    <nav class="bg-gray-800 py-3 rounded-md mb-8 inline-block w-full max-w-md mx-auto">
+      <div class="flex justify-center space-x-6">
+        <a href="/services.html" class="text-teal-400 font-semibold hover:underline">Services</a>
+        <a href="/about.html" class="text-teal-400 font-semibold hover:underline">About</a>
+        <a href="/blog.html" class="text-teal-400 font-semibold hover:underline">Blog</a>
+        <a href="/contact.html" class="text-teal-400 font-semibold hover:underline">Contact</a>
+      </div>
+    </nav>
+
     <p class="text-lg leading-relaxed max-w-xl mx-auto text-gray-300">
       Iron Dillo Cybersecurity provides honest, hands-on protection for individuals, small businesses, and rural operations—like farms, ranches, and independent shops. Veteran-owned and mission-driven, we offer remote diagnostics, documentation, and guidance you can trust. Digital defense with Texas grit.
     </p>
   </header>
-
-  <!-- Navigation -->
-  <nav class="bg-gray-800 py-3 text-center max-w-3xl mx-auto rounded-md mb-12 fade-in">
-    <a href="/services.html" class="text-teal-400 font-semibold hover:underline mx-5">Services</a>
-    <a href="/about.html" class="text-teal-400 font-semibold hover:underline mx-5">About</a>
-    <a href="/blog.html" class="text-teal-400 font-semibold hover:underline mx-5">Blog</a>
-    <a href="/contact.html" class="text-teal-400 font-semibold hover:underline mx-5">Contact</a>
-  </nav>
 
   <!-- Social icons -->
   <section class="fade-in max-w-3xl mx-auto mb-12 text-center">
@@ -40,13 +43,6 @@
       <a href="https://github.com/Artilleryjoe" target="_blank" aria-label="GitHub" class="hover:scale-110 transition transform">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9 text-teal-400 hover:text-white" viewBox="0 0 24 24" fill="currentColor">
           <path d="M12 0.5C5.73 0.5.5 5.73.5 12.02c0 5.1 3.29 9.42 7.86 10.96.58.1.79-.25.79-.56v-2.2c-3.2.7-3.87-1.54-3.87-1.54-.53-1.35-1.3-1.71-1.3-1.71-1.06-.73.08-.72.08-.72 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.73 1.27 3.4.97.1-.75.4-1.27.72-1.56-2.56-.3-5.26-1.28-5.26-5.7 0-1.26.45-2.3 1.2-3.12-.12-.3-.52-1.52.11-3.17 0 0 .97-.31 3.18 1.2a11.07 11.07 0 0 1 2.9-.39c.99 0 1.98.13 2.9.39 2.21-1.51 3.18-1.2 3.18-1.2.63 1.65.24 2.87.12 3.17.75.82 1.2 1.86 1.2 3.12 0 4.43-2.7 5.4-5.27 5.7.41.35.77 1.04.77 2.1v3.12c0 .31.21.67.8.56A10.5 10.5 0 0 0 23.5 12C23.5 5.73 18.27.5 12 .5Z"/>
-        </svg>
-      </a>
-
-      <!-- LinkedIn -->
-      <a href="https://www.linkedin.com/in/YOUR-LINKEDIN-ID" target="_blank" aria-label="LinkedIn" class="hover:scale-110 transition transform">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9 text-teal-400 hover:text-white" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M4.98 3.5A2.5 2.5 0 1 1 5 8.5 2.5 2.5 0 0 1 4.98 3.5ZM3 9h4v12H3zm7.5 0H15v1.7c.68-1.14 2-2.2 4.3-2.2 4.3 0 5.2 2.84 5.2 6.5V21h-4v-5.2c0-1.2-.02-2.8-1.7-2.8s-2 1.3-2 2.7V21h-4z"/>
         </svg>
       </a>
     </div>
