--- a/index.html
+++ b/index.html
@@ -31,8 +31,20 @@
     </nav>
 
     <p class="text-lg leading-relaxed max-w-xl mx-auto text-gray-300">
-      Iron Dillo Cybersecurity provides honest, hands-on protection for individuals, small businesses, and rural operations—like farms, ranches, and independent shops. Veteran-owned and mission-driven, we offer remote diagnostics, documentation, and guidance you can trust. Digital defense with Texas grit.
-    </p>
+  <span class="block mb-2">
+    <span class="text-teal-400 font-medium">Iron Dillo Cybersecurity</span> delivers hands-on protection for
+    <span class="font-semibold text-white">individuals</span>,
+    <span class="font-semibold text-white">small businesses</span>,
+    and <span class="font-semibold text-white">rural operations</span> —
+    including farms, ranches, and independent shops.
+  </span>
+  <span class="block">
+    <span class="text-teal-400 font-medium">Veteran-owned</span> and mission-driven,
+    we provide remote diagnostics, documentation, and guidance you can <span class="font-semibold text-white">trust</span>.
+    <em class="italic text-gray-400">Digital defense with Texas grit.</em>
+  </span>
+</p>
+
   </header>
 
   <!-- Social icons -->
