--- a/about.html
+++ b/about.html
@@ -7,40 +7,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+    .fade-in { animation: fadeIn 1s ease-out both; }
+  </style>
 </head>
 <body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
 
-  <!-- Logo Header -->
-  <header class="text-center pt-8">
-    <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
+  <!-- Header with logo and navigation -->
+  <header class="p-8 text-center max-w-3xl mx-auto fade-in">
+    <img src="/assets/IronDilloLogo.png" alt="IronDillo logo" class="mx-auto mb-6 w-32 h-auto" />
+    <h1 class="text-4xl font-extrabold text-teal-400 mb-4">Iron Dillo Cybersecurity</h1>
+
+    <!-- Navigation -->
+    <nav class="bg-gray-800 py-3 rounded-md mb-8 inline-block w-full max-w-md mx-auto">
+      <div class="flex justify-center space-x-6">
+        <a href="/index.html" class="text-teal-400 font-semibold hover:underline">Home</a>
+        <a href="/services.html" class="text-teal-400 font-semibold hover:underline">Services</a>
+        <a href="/about.html" class="text-teal-400 font-semibold hover:underline">About</a>
+        <a href="/blog.html" class="text-teal-400 font-semibold hover:underline">Blog</a>
+        <a href="/contact.html" class="text-teal-400 font-semibold hover:underline">Contact</a>
+      </div>
+    </nav>
   </header>
 
-  <!-- Navigation -->
-  <nav class="bg-gray-800 py-3 text-center space-x-8 mb-10">
-    <a href="/index.html" class="text-teal-400 hover:underline font-semibold">Home</a>
-    <a href="/services.html" class="text-teal-400 hover:underline font-semibold">Services</a>
-    <a href="/about.html" class="text-teal-400 hover:underline font-semibold">About</a>
-    <a href="/blog.html" class="text-teal-400 hover:underline font-semibold">Blog</a>
-    <a href="/contact.html" class="text-teal-400 hover:underline font-semibold">Contact</a>
-  </nav>
-
-  <main class="flex-grow max-w-4xl mx-auto px-6 py-12 space-y-10">
+  <!-- About Content -->
+  <main class="flex-grow max-w-4xl mx-auto px-6 pb-16 fade-in">
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h1 class="text-4xl font-extrabold text-teal-400 mb-6">About Iron Dillo Cybersecurity</h1>
+      <h2 class="text-3xl font-semibold text-teal-400 mb-6">About Iron Dillo Cybersecurity</h2>
       <p class="text-gray-300 leading-relaxed mb-4">
-        Iron Dillo Cybersecurity is a veteran-owned consultancy providing practical and trustworthy cybersecurity solutions for individuals and small businesses, especially in East Texas and rural communities. We believe everyone deserves clear and ethical guidance to protect their digital lives without confusing jargon or hidden agendas.
+        <span class="text-white font-medium">Iron Dillo Cybersecurity</span> is a veteran-owned consultancy providing practical, trustworthy solutions for individuals and small businesses—especially those in <span class="text-white font-medium">East Texas</span> and rural communities. We believe everyone deserves clear, ethical guidance to protect their digital lives.
       </p>
       <p class="text-gray-300 leading-relaxed mb-4">
-        Our approach is rooted in discipline, integrity, and a commitment to demystifying cybersecurity. Whether you need to secure your first website or address complex vulnerabilities, Iron Dillo delivers hands-on support tailored to your unique needs.
+        Our approach is rooted in <span class="text-white font-medium">discipline</span>, <span class="text-white font-medium">integrity</span>, and a commitment to demystifying cybersecurity. Whether you're securing your first website or navigating complex threats, we deliver hands-on support tailored to your needs.
       </p>
       <p class="text-gray-300 leading-relaxed">
-        Iron Dillo was founded by a U.S. Army combat veteran and cybersecurity professional who combines technical expertise with a straightforward and human approach. The mission is to help those often overlooked by larger firms build safer digital foundations one client at a time.
+        Iron Dillo was founded by a <span class="text-white font-medium">U.S. Army combat veteran</span> and cybersecurity professional who blends technical expertise with a straightforward, human approach. We aim to help those overlooked by larger firms build safer digital foundations—one client at a time.
       </p>
     </section>
   </main>
 
-  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-12 text-sm">
-    &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
+  <!-- Footer -->
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md">
+    &copy; 2025 Iron Dillo. All rights reserved. | 
     <a href="/privacy.html" class="hover:underline">Privacy</a> | 
     <a href="/terms.html" class="hover:underline">Terms</a>
   </footer>
