--- a/privacy.html
+++ b/privacy.html
@@ -2,24 +2,23 @@
 <html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <title>Privacy Policy – IronDillo</title>
-  <meta name="description" content="IronDillo respects your privacy—no cookies, no tracking, no nonsense. Read our full policy here." />
+  <title>Privacy Policy – Iron Dillo</title>
+  <meta name="description" content="Iron Dillo respects your privacy—no cookies, no tracking, no nonsense. Read our full policy here." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <link rel="canonical" href="https://irondillo.com/privacy.html" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
 
-  <!-- Logo and Header -->
-  <header class="text-center p-6">
+  <!-- Logo Header -->
+  <header class="text-center pt-8">
     <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
-    <h1 class="text-4xl font-extrabold text-teal-400 mb-2">Privacy Policy</h1>
-    <p class="text-gray-400">Effective Date: June 12, 2025</p>
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-gray-800 py-3 text-center space-x-8 mb-10">
+  <nav class="bg-gray-800 py-3 text-center space-x-8 mb-10 max-w-3xl mx-auto rounded-md">
     <a href="/index.html" class="text-teal-400 hover:underline font-semibold">Home</a>
     <a href="/services.html" class="text-teal-400 hover:underline font-semibold">Services</a>
     <a href="/about.html" class="text-teal-400 hover:underline font-semibold">About</a>
@@ -28,29 +27,40 @@
   </nav>
 
   <!-- Main Content -->
-  <main class="flex-grow max-w-3xl mx-auto px-6 py-8 space-y-8">
+  <main class="flex-grow max-w-3xl mx-auto px-6 py-12">
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <p class="mb-4"><strong class="text-teal-300">IronDillo.com does not collect personal data.</strong> This site is designed with privacy in mind:</p>
+      <h1 class="text-3xl font-extrabold text-teal-400 mb-4">Privacy Policy</h1>
+      <p class="text-gray-400 mb-2">Effective Date: June 12, 2025</p>
 
-      <ul class="list-disc list-inside space-y-2">
+      <p class="mb-6 text-gray-300 leading-relaxed">
+        <strong class="text-teal-300">IronDillo.com does not collect personal data.</strong> This site is built with privacy as a priority:
+      </p>
+
+      <ul class="list-disc list-inside space-y-2 text-gray-300 mb-6">
         <li>No cookies</li>
         <li>No tracking scripts</li>
         <li>No analytics</li>
       </ul>
 
-      <p class="mt-4">If you choose to use the contact form, the message you send will be delivered via Formspree and may include your name, email, and the message content. This information is only used to reply to your inquiry and is not stored on this site.</p>
+      <p class="text-gray-300 leading-relaxed mb-4">
+        If you use the contact form, your message is sent via Formspree and may include your name, email, and message content. This is only used to reply to your inquiry. None of this is stored on Iron Dillo servers.
+      </p>
 
-      <p class="mt-4">I do not share, sell, or disclose personal information to third parties.</p>
+      <p class="text-gray-300 leading-relaxed mb-4">
+        I do not share, sell, or disclose any personal information to third parties.
+      </p>
 
-      <p class="mt-4">If you have any concerns, please reach out directly via the <a href="/index.html#contact" class="text-teal-400 underline hover:text-teal-300">contact form</a>.</p>
+      <p class="text-gray-300 leading-relaxed">
+        Questions or concerns? Please reach out through the <a href="/index.html#contact" class="text-teal-400 underline hover:text-teal-300">contact form</a>.
+      </p>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-12 text-sm">
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-    <a href="/privacy.html" class="hover:underline">Privacy</a> | 
-    <a href="/terms.html" class="hover:underline">Terms</a>
+    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
   </footer>
 
 </body>
