--- a/services.html
+++ b/services.html
@@ -10,16 +10,13 @@
 </head>
 <body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
 
-  <header class="p-6 text-center">
+  <!-- Logo Header -->
+  <header class="text-center pt-8">
     <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
-    <h1 class="text-4xl font-extrabold text-teal-400 mb-4">Services</h1>
-    <p class="max-w-3xl mx-auto text-lg px-4 leading-relaxed">
-      Practical cybersecurity solutions tailored for East Texas individuals and small businesses. Ethical, clear, and focused on what matters to you.
-    </p>
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-gray-800 py-3 text-center space-x-8 mb-10">
+  <nav class="bg-gray-800 py-3 text-center space-x-8 mb-10 max-w-4xl mx-auto rounded-md">
     <a href="/index.html" class="text-teal-400 hover:underline font-semibold">Home</a>
     <a href="/services.html" class="text-teal-400 hover:underline font-semibold">Services</a>
     <a href="/about.html" class="text-teal-400 hover:underline font-semibold">About</a>
@@ -32,52 +29,52 @@
     <!-- Services Sections -->
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Security Consultations & Risk Assessments</h2>
-      <p>Identify your current vulnerabilities, understand cybersecurity threats in clear language, and receive actionable recommendations to strengthen your systems and protect your data.</p>
+      <p class="text-gray-300 leading-relaxed">Identify your current vulnerabilities, understand cybersecurity threats in clear language, and receive actionable recommendations to strengthen your systems and protect your data.</p>
     </section>
 
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Cybersecurity Policy & Documentation Support</h2>
-      <p>Develop custom cybersecurity policies, standard operating procedures (SOPs), and incident response plans designed specifically for your operations to help you stay prepared and compliant.</p>
+      <p class="text-gray-300 leading-relaxed">Develop custom cybersecurity policies, standard operating procedures (SOPs), and incident response plans designed specifically for your operations to help you stay prepared and compliant.</p>
     </section>
 
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Website & Web Presence Security Audits</h2>
-      <p>Audit your website, online forms, and public-facing content to find vulnerabilities such as cross-site scripting (XSS), misconfigurations, and other common security risks that could expose your business to cyberattacks.</p>
+      <p class="text-gray-300 leading-relaxed">Audit your website, online forms, and public-facing content to find vulnerabilities such as cross-site scripting (XSS), misconfigurations, and other common security risks that could expose your business to cyberattacks.</p>
     </section>
 
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Personal & Small Business Digital Security Training</h2>
-      <p>One-on-one or small group training sessions covering phishing prevention, password safety, operational security basics, and other essential topics—delivered in straightforward, easy-to-understand language.</p>
+      <p class="text-gray-300 leading-relaxed">One-on-one or small group training sessions covering phishing prevention, password safety, operational security basics, and other essential topics—delivered in straightforward, easy-to-understand language.</p>
     </section>
 
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Incident Response Guidance & Remediation Assistance</h2>
-      <p>If you experience a security incident, I’ll guide you through the response process, help identify the scope, and assist with remediation to minimize damage and restore security quickly.</p>
+      <p class="text-gray-300 leading-relaxed">If you experience a security incident, I’ll guide you through the response process, help identify the scope, and assist with remediation to minimize damage and restore security quickly.</p>
     </section>
 
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Vulnerability Scanning & Reporting</h2>
-      <p>Thorough scans of your systems and networks to identify weaknesses, paired with clear, actionable reports outlining findings and recommended fixes.</p>
+      <p class="text-gray-300 leading-relaxed">Thorough scans of your systems and networks to identify weaknesses, paired with clear, actionable reports outlining findings and recommended fixes.</p>
     </section>
 
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-teal-300 mb-4">Secure Configuration of Devices & Networks</h2>
-      <p>Ensure your devices, routers, and networks are set up with security best practices to reduce risks and protect your digital environment.</p>
+      <p class="text-gray-300 leading-relaxed">Ensure your devices, routers, and networks are set up with security best practices to reduce risks and protect your digital environment.</p>
     </section>
 
     <section class="text-center mt-12">
       <p class="text-teal-400 font-semibold max-w-xl mx-auto">
         Pricing is customized based on your unique needs.<br />
-        <a href="/contact.html" class="underline">Contact me</a> today for a free consultation and personalized quote.
+        <a href="/contact.html" class="underline hover:text-teal-300">Contact me</a> today for a free consultation and personalized quote.
       </p>
     </section>
 
   </main>
 
-  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-12 text-sm">
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-5xl mx-auto rounded-md">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-    <a href="/privacy.html" class="hover:underline">Privacy</a> | 
-    <a href="/terms.html" class="hover:underline">Terms</a>
+    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
   </footer>
 
 </body>
