--- a/terms.html
+++ b/terms.html
@@ -11,15 +11,15 @@
 </head>
 <body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
 
-  <!-- Logo and Header -->
-  <header class="text-center p-6">
+  <!-- Logo Header -->
+  <header class="text-center pt-8">
     <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
     <h1 class="text-4xl font-extrabold text-teal-400 mb-2">Terms of Use</h1>
     <p class="text-gray-400">Effective Date: June 12, 2025</p>
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-gray-800 py-3 text-center space-x-8 mb-10">
+  <nav class="bg-gray-800 py-3 text-center space-x-8 mb-10 max-w-4xl mx-auto rounded-md">
     <a href="/index.html" class="text-teal-400 hover:underline font-semibold">Home</a>
     <a href="/services.html" class="text-teal-400 hover:underline font-semibold">Services</a>
     <a href="/about.html" class="text-teal-400 hover:underline font-semibold">About</a>
@@ -32,7 +32,7 @@
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <p class="mb-4">By using this website (<span class="text-teal-300">irondillo.com</span>), you agree to the following terms and conditions:</p>
 
-      <ul class="list-disc list-inside space-y-2">
+      <ul class="list-disc list-inside space-y-2 text-gray-300">
         <li>This site provides cybersecurity-related information, services, and commentary for educational and informational purposes only.</li>
         <li>No guarantees are made regarding the accuracy, completeness, or effectiveness of any advice provided. Use at your own discretion.</li>
         <li>Engaging in services offered through this site (such as consulting) does not establish any legal partnership or contract unless explicitly agreed upon in writing.</li>
@@ -45,10 +45,10 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-12 text-sm">
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-4xl mx-auto rounded-md">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-    <a href="/privacy.html" class="hover:underline">Privacy</a> | 
-    <a href="/terms.html" class="hover:underline">Terms</a>
+    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
   </footer>
 
 </body>
