--- a/about.html
+++ b/about.html
@@ -20,16 +20,15 @@
     <h1 class="text-4xl font-extrabold text-teal-400 mb-4">Iron Dillo Cybersecurity</h1>
 
     <!-- Navigation -->
-    <nav class="bg-gray-800 py-3 rounded-md mb-8 inline-block w-full max-w-md mx-auto">
-      <div class="flex justify-center space-x-6">
-        <a href="/index.html" class="text-teal-400 font-semibold hover:underline">Home</a>
-        <a href="/services.html" class="text-teal-400 font-semibold hover:underline">Services</a>
-        <a href="/about.html" class="text-teal-400 font-semibold hover:underline">About</a>
-        <a href="/blog.html" class="text-teal-400 font-semibold hover:underline">Blog</a>
-        <a href="/contact.html" class="text-teal-400 font-semibold hover:underline">Contact</a>
-      </div>
-    </nav>
-  </header>
+    <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
+  <div class="flex justify-between">
+    <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-3">Home</a>
+    <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-3">Services</a>
+    <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-3">About</a>
+    <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-3">Blog</a>
+    <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-3">Contact</a>
+  </div>
+</nav>
 
   <!-- About Content -->
   <main class="flex-grow max-w-4xl mx-auto px-6 pb-16 fade-in">
