--- a/blog.html
+++ b/blog.html
@@ -32,15 +32,15 @@
     <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo" class="mx-auto w-32 mb-6" />
     <h1 class="text-4xl font-extrabold text-teal-400 mb-4">Iron Dillo Blog</h1>
 
-    <nav class="bg-gray-800 py-3 rounded-md mb-8 inline-block w-full max-w-md mx-auto">
-      <div class="flex justify-center space-x-6">
-        <a href="/index.html" class="text-teal-400 font-semibold hover:underline">Home</a>
-        <a href="/services.html" class="text-teal-400 font-semibold hover:underline">Services</a>
-        <a href="/about.html" class="text-teal-400 font-semibold hover:underline">About</a>
-        <a href="/blog.html" class="text-teal-400 font-semibold hover:underline">Blog</a>
-        <a href="/contact.html" class="text-teal-400 font-semibold hover:underline">Contact</a>
-      </div>
-    </nav>
+    <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
+  <div class="flex justify-between">
+    <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-3">Home</a>
+    <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-3">Services</a>
+    <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-3">About</a>
+    <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-3">Blog</a>
+    <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-3">Contact</a>
+  </div>
+</nav>
 
     <p class="text-gray-300 max-w-xl mx-auto">
       Cybersecurity guidance, digital hygiene tips, and insights for real people and small businesses.
