--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
     <h1 class="text-4xl font-extrabold text-teal-400 mb-4">Iron Dillo Cybersecurity</h1>
     
     <!-- Navigation right below the title -->
-    <nav class="bg-gray-800 py-3 rounded-md mb-8 inline-block w-full max-w-md mx-auto">
-      <div class="flex justify-center space-x-6">
-        <a href="/services.html" class="text-teal-400 font-semibold hover:underline">Services</a>
-        <a href="/about.html" class="text-teal-400 font-semibold hover:underline">About</a>
-        <a href="/blog.html" class="text-teal-400 font-semibold hover:underline">Blog</a>
-        <a href="/contact.html" class="text-teal-400 font-semibold hover:underline">Contact</a>
-      </div>
-    </nav>
+    <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
+  <div class="flex justify-between">
+    <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-3">Home</a>
+    <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-3">Services</a>
+    <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-3">About</a>
+    <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-3">Blog</a>
+    <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-3">Contact</a>
+  </div>
+</nav>
 
     <p class="text-lg leading-relaxed max-w-xl mx-auto text-gray-300">
   <span class="block mb-2">
