--- a/terms.html
+++ b/terms.html
@@ -19,13 +19,15 @@
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-gray-800 py-3 text-center space-x-8 mb-10 max-w-4xl mx-auto rounded-md">
-    <a href="/index.html" class="text-teal-400 hover:underline font-semibold">Home</a>
-    <a href="/services.html" class="text-teal-400 hover:underline font-semibold">Services</a>
-    <a href="/about.html" class="text-teal-400 hover:underline font-semibold">About</a>
-    <a href="/blog.html" class="text-teal-400 hover:underline font-semibold">Blog</a>
-    <a href="/contact.html" class="text-teal-400 hover:underline font-semibold">Contact</a>
-  </nav>
+<nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
+  <div class="flex justify-between">
+    <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-3">Home</a>
+    <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-3">Services</a>
+    <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-3">About</a>
+    <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-3">Blog</a>
+    <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-3">Contact</a>
+  </div>
+</nav>
 
   <!-- Main Content -->
   <main class="flex-grow max-w-3xl mx-auto px-6 py-8 space-y-8">
