--- a/index.html
+++ b/index.html
@@ -22,29 +22,29 @@
     
     <!-- Navigation right below the title -->
     <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
-  <div class="flex justify-between">
-    <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-3">Home</a>
-    <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-3">Services</a>
-    <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-3">About</a>
-    <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-3">Blog</a>
-    <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-3">Contact</a>
-  </div>
-</nav>
+      <div class="flex justify-between">
+        <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+        <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+        <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+        <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Blog</a>
+        <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+      </div>
+    </nav>
 
     <p class="text-lg leading-relaxed max-w-xl mx-auto text-gray-300">
-  <span class="block mb-2">
-    <span class="text-teal-400 font-medium">Iron Dillo Cybersecurity</span> delivers hands-on protection for
-    <span class="font-semibold text-white">individuals</span>,
-    <span class="font-semibold text-white">small businesses</span>,
-    and <span class="font-semibold text-white">rural operations</span> —
-    including farms, ranches, and independent shops.
-  </span>
-  <span class="block">
-    <span class="text-teal-400 font-medium">Veteran-owned</span> and mission-driven,
-    we provide remote diagnostics, documentation, and guidance you can <span class="font-semibold text-white">trust</span>.
-    <em class="italic text-gray-400">Digital defense with Texas grit.</em>
-  </span>
-</p>
+      <span class="block mb-2">
+        <span class="text-teal-400 font-medium">Iron Dillo Cybersecurity</span> delivers hands-on protection for
+        <span class="font-semibold text-white">individuals</span>,
+        <span class="font-semibold text-white">small businesses</span>,
+        and <span class="font-semibold text-white">rural operations</span> —
+        including farms, ranches, and independent shops.
+      </span>
+      <span class="block">
+        <span class="text-teal-400 font-medium">Veteran-owned</span> and mission-driven,
+        we provide remote diagnostics, documentation, and guidance you can <span class="font-semibold text-white">trust</span>.
+        <em class="italic text-gray-400">Digital defense with Texas grit.</em>
+      </span>
+    </p>
 
   </header>
 
