--- a/about.html
+++ b/about.html
@@ -21,14 +21,15 @@
 
     <!-- Navigation -->
     <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
-  <div class="flex justify-between">
-    <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-3">Home</a>
-    <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-3">Services</a>
-    <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-3">About</a>
-    <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-3">Blog</a>
-    <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-3">Contact</a>
-  </div>
-</nav>
+      <div class="flex justify-between">
+        <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+        <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+        <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+        <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Blog</a>
+        <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+      </div>
+    </nav>
+  </header>
 
   <!-- About Content -->
   <main class="flex-grow max-w-4xl mx-auto px-6 pb-16 fade-in">
