--- a/blog.html
+++ b/blog.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <title>Iron Dillo Blog – Cyber Hygiene Tips & Updates</title>
-  <meta name="description" content="Cybersecurity guidance, threat breakdowns, and plain-English advice for real-world digital safety.">
+  <meta name="description" content="Cybersecurity guidance, threat breakdowns, and plain-English advice for real-world digital safety." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="/assets/favicon.ico" />
   <link rel="canonical" href="https://irondillo.com/blog.html" />
 
   <!-- SEO + Open Graph -->
-  <meta name="keywords" content="cybersecurity blog, IT tips, threat awareness, cyber hygiene, small business security">
-  <meta name="author" content="Kristopher McCoy">
-  <meta property="og:title" content="IronDillo Blog">
-  <meta property="og:description" content="Cyber hygiene tips, threat breakdowns, and security insights for small businesses and individuals.">
-  <meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg">
-  <meta property="og:url" content="https://irondillo.com/blog.html">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="keywords" content="cybersecurity blog, IT tips, threat awareness, cyber hygiene, small business security" />
+  <meta name="author" content="Kristopher McCoy" />
+  <meta property="og:title" content="IronDillo Blog" />
+  <meta property="og:description" content="Cyber hygiene tips, threat breakdowns, and security insights for small businesses and individuals." />
+  <meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg" />
+  <meta property="og:url" content="https://irondillo.com/blog.html" />
+  <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -33,14 +33,14 @@
     <h1 class="text-4xl font-extrabold text-teal-400 mb-4">Iron Dillo Blog</h1>
 
     <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
-  <div class="flex justify-between">
-    <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-3">Home</a>
-    <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-3">Services</a>
-    <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-3">About</a>
-    <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-3">Blog</a>
-    <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-3">Contact</a>
-  </div>
-</nav>
+      <div class="flex justify-between">
+        <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+        <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+        <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+        <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Blog</a>
+        <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+      </div>
+    </nav>
 
     <p class="text-gray-300 max-w-xl mx-auto">
       Cybersecurity guidance, digital hygiene tips, and insights for real people and small businesses.
