--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
   </header>
 
-  <section class="fade-in max-w-3xl mx-auto mb-12 text-center">
-  <p class="text-teal-400 font-semibold mb-4">Connect with me</p>
-  <div class="flex justify-center items-center gap-8">
-    <!-- GitHub -->
+  <!-- Social icons -->
+<section class="fade-in max-w-3xl mx-auto mb-8 text-center">
+  <p class="text-teal-400 font-semibold mb-2">Connect with me</p>
+  <div class="flex justify-center">
     <a href="https://github.com/Artilleryjoe" target="_blank" aria-label="GitHub" class="hover:scale-110 transition-transform duration-300">
       <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9 text-teal-400 hover:text-white" viewBox="0 0 24 24" fill="currentColor">
         <path d="M12 0.5C5.73 0.5.5 5.73.5 12.02c0 5.1 3.29 9.42 7.86 10.96.58.1.79-.25.79-.56v-2.2c-3.2.7-3.87-1.54-3.87-1.54-.53-1.35-1.3-1.71-1.3-1.71-1.06-.73.08-.72.08-.72 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.73 1.27 3.4.97.1-.75.4-1.27.72-1.56-2.56-.3-5.26-1.28-5.26-5.7 0-1.26.45-2.3 1.2-3.12-.12-.3-.52-1.52.11-3.17 0 0 .97-.31 3.18 1.2a11.07 11.07 0 0 1 2.9-.39c.99 0 1.98.13 2.9.39 2.21-1.51 3.18-1.2 3.18-1.2.63 1.65.24 2.87.12 3.17.75.82 1.2 1.86 1.2 3.12 0 4.43-2.7 5.4-5.27 5.7.41.35.77 1.04.77 2.1v3.12c0 .31.21.67.8.56A10.5 10.5 0 0 0 23.5 12C23.5 5.73 18.27.5 12 .5Z"/>
@@ -64,6 +64,7 @@
     </a>
   </div>
 </section>
+
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md">
