--- a/index.html
+++ b/index.html
@@ -38,21 +38,16 @@ animation: fadeIn 1.2s ease-out both;
 </nav>
 
 <p class="text-lg leading-relaxed max-w-xl mx-auto text-gray-300">
-      <span class="block mb-2">
-        <span class="text-teal-400 font-medium">Iron Dillo Cybersecurity</span> delivers hands-on protection for
-        <span class="font-semibold text-white">individuals</span>,
-        <span class="font-semibold text-white">small businesses</span>,
-        and <span class="font-semibold text-white">rural operations</span> —
-        including farms, ranches, and independent shops.
-      </span>
-      <span class="block">
-        <span class="text-teal-400 font-medium">Veteran-owned</span> and mission-driven,
-        we provide remote diagnostics, documentation, and guidance you can <span class="font-semibold text-white">trust</span>.
-        <em class="italic text-gray-400">Digital defense with Texas grit.</em>
-      </span>
-      Iron Dillo Cybersecurity provides practical cybersecurity support for individuals, small businesses, and rural operations including farms, ranches, and independent shops.  
-      As a veteran-owned business, I focus on thorough diagnostics, clear documentation, and straightforward guidance.  
-      If you want honest, no-nonsense help with your digital security, you’re in the right place.
+  <span class="block mb-2">
+    <span class="text-teal-400 font-medium">Iron Dillo Cybersecurity</span> delivers hands-on protection for
+    <span class="font-semibold text-white">individuals</span>, 
+    <span class="font-semibold text-white">small businesses</span>, and 
+    <span class="font-semibold text-white">rural operations</span> — including farms, ranches, and independent shops.
+  </span>
+  <span class="block mb-2">
+    As a <span class="text-teal-400 font-medium">veteran-owned</span>, mission-driven business, we provide remote diagnostics, documentation, and guidance you can <span class="font-semibold text-white">trust</span>.
+  </span>
+  <em class="italic text-gray-400">Digital defense with Texas grit.</em>
 </p>
 
 </header>
