--- a/commitment.html
+++ b/commitment.html
@@ -1,17 +1,44 @@
-<section class="max-w-4xl mx-auto p-6 bg-white rounded-lg shadow-md mt-10">
-  <h1 class="text-3xl font-semibold mb-6 text-gray-900">Our Commitment</h1>
-  <p class="mb-4 text-gray-700">
-    At Iron Dillo Cybersecurity, integrity and transparency guide everything we do. As a sole proprietor, I provide personalized cybersecurity consulting services with your best interests in mind.
-  </p>
-  <ul class="list-disc list-inside text-gray-700 space-y-3 mb-6">
-    <li><strong>Operating Status:</strong> I currently operate as an individual consultant and am working toward forming a registered business entity.</li>
-    <li><strong>Client Consent:</strong> No security assessments or testing will be performed without your explicit permission.</li>
-    <li><strong>Confidentiality:</strong> Your data and privacy are treated with the highest respect and protected under a strict confidentiality agreement.</li>
-    <li><strong>Scope & Limitations:</strong> I provide practical recommendations and risk mitigation but cannot guarantee complete immunity from cyber threats.</li>
-    <li><strong>Billing Transparency:</strong> All fees and deliverables will be clearly outlined in advance and invoiced accurately.</li>
-    <li><strong>Legal Compliance:</strong> All work follows applicable laws and ethical standards in cybersecurity consulting.</li>
-  </ul>
-  <p class="text-gray-700">
-    Thank you for trusting Iron Dillo Cybersecurity to help protect your digital assets.
-  </p>
-</section>
+<!DOCTYPE html>
+<html lang="en" class="scroll-smooth">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Our Commitment - Iron Dillo Cybersecurity</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet" />
+</head>
+<body class="bg-gray-50 flex flex-col min-h-screen text-gray-900 font-sans">
+
+  <!-- Main content -->
+  <main class="flex-grow max-w-4xl mx-auto p-8">
+    <header class="mb-8">
+      <h1 class="text-4xl font-extrabold text-teal-600">Our Commitment</h1>
+      <p class="mt-2 text-gray-700">
+        At Iron Dillo Cybersecurity, integrity and transparency guide everything we do.
+      </p>
+    </header>
+
+    <section class="bg-white p-8 rounded-lg shadow-md space-y-6 text-gray-800">
+      <p>
+        As a sole proprietor, I provide personalized cybersecurity consulting services with your best interests in mind.
+      </p>
+      <ul class="list-disc list-inside space-y-4">
+        <li><strong>Operating Status:</strong> I currently operate as an individual consultant and am working toward forming a registered business entity.</li>
+        <li><strong>Client Consent:</strong> No security assessments or testing will be performed without your explicit permission.</li>
+        <li><strong>Confidentiality:</strong> Your data and privacy are treated with the highest respect and protected under a strict confidentiality agreement.</li>
+        <li><strong>Scope &amp; Limitations:</strong> I provide practical recommendations and risk mitigation but cannot guarantee complete immunity from cyber threats.</li>
+        <li><strong>Billing Transparency:</strong> All fees and deliverables will be clearly outlined in advance and invoiced accurately.</li>
+        <li><strong>Legal Compliance:</strong> All work follows applicable laws and ethical standards in cybersecurity consulting.</li>
+      </ul>
+      <p>
+        Thank you for trusting Iron Dillo Cybersecurity to help protect your digital assets.
+      </p>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-gray-100 border-t border-gray-300 mt-12 py-6 text-center text-gray-600 text-sm max-w-4xl mx-auto rounded-md">
+    &copy; 2025 Iron Dillo Cybersecurity. All rights reserved.
+  </footer>
+
+</body>
+</html>
