--- a/privacy.html
+++ b/privacy.html
@@ -2,11 +2,11 @@
 <html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <title>Privacy Policy – Iron Dillo</title>
-  <meta name="description" content="Iron Dillo respects your privacy—no cookies, no tracking, no nonsense. Read our full policy here." />
+  <title>Our Commitment – Iron Dillo</title>
+  <meta name="description" content="Iron Dillo Cybersecurity’s commitment to integrity, transparency, and client trust." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-  <link rel="canonical" href="https://irondillo.com/privacy.html" />
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+  <link rel="canonical" href="https://irondillo.com/commitment.html" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -19,41 +19,35 @@
 
   <!-- Navigation -->
   <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
-  <div class="flex justify-between">
-    <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-3">Home</a>
-    <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-3">Services</a>
-    <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-3">About</a>
-    <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-3">Blog</a>
-    <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-3">Contact</a>
-  </div>
-</nav>
+    <div class="flex justify-between">
+      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-3">Home</a>
+      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-3">Services</a>
+      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-3">About</a>
+      <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-3">Blog</a>
+      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-3">Contact</a>
+    </div>
+  </nav>
 
   <!-- Main Content -->
   <main class="flex-grow max-w-3xl mx-auto px-6 py-12">
-    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h1 class="text-3xl font-extrabold text-teal-400 mb-4">Privacy Policy</h1>
-      <p class="text-gray-400 mb-2">Effective Date: June 12, 2025</p>
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8 text-gray-300">
+      <h1 class="text-3xl font-extrabold text-teal-400 mb-6">Our Commitment</h1>
 
-      <p class="mb-6 text-gray-300 leading-relaxed">
-        <strong class="text-teal-300">IronDillo.com does not collect personal data.</strong> This site is built with privacy as a priority:
+      <p class="mb-6">
+        At Iron Dillo Cybersecurity, integrity and transparency guide everything we do. As a sole proprietor, I provide personalized cybersecurity consulting with your best interests in mind.
       </p>
 
-      <ul class="list-disc list-inside space-y-2 text-gray-300 mb-6">
-        <li>No cookies</li>
-        <li>No tracking scripts</li>
-        <li>No analytics</li>
+      <ul class="list-disc list-inside space-y-4 mb-6">
+        <li><strong>Operating Status:</strong> I currently operate as an individual consultant and am working toward forming a registered business entity.</li>
+        <li><strong>Client Consent:</strong> No security assessments or testing will be performed without your explicit permission.</li>
+        <li><strong>Confidentiality:</strong> Your data and privacy are treated with the highest respect and protected under a strict confidentiality agreement.</li>
+        <li><strong>Scope &amp; Limitations:</strong> I provide practical recommendations and risk mitigation but cannot guarantee complete immunity from cyber threats.</li>
+        <li><strong>Billing Transparency:</strong> All fees and deliverables will be clearly outlined in advance and invoiced accurately.</li>
+        <li><strong>Legal Compliance:</strong> All work follows applicable laws and ethical standards in cybersecurity consulting.</li>
       </ul>
 
-      <p class="text-gray-300 leading-relaxed mb-4">
-        If you use the contact form, your message is sent via Formspree and may include your name, email, and message content. This is only used to reply to your inquiry. None of this is stored on Iron Dillo servers.
-      </p>
-
-      <p class="text-gray-300 leading-relaxed mb-4">
-        I do not share, sell, or disclose any personal information to third parties.
-      </p>
-
-      <p class="text-gray-300 leading-relaxed">
-        Questions or concerns? Please reach out through the <a href="/index.html#contact" class="text-teal-400 underline hover:text-teal-300">contact form</a>.
+      <p>
+        Thank you for trusting Iron Dillo Cybersecurity to help protect your digital assets.
       </p>
     </section>
   </main>
