--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ animation: fadeIn 1.2s ease-out both;
     </a>
 
     <!-- Facebook -->
-    <a href="https://facebook.com/https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook" class="hover:scale-110 transition-transform duration-300 text-teal-400 hover:text-white">
+    <a href="https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook" class="hover:scale-110 transition-transform duration-300 text-teal-400 hover:text-white">
       <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9" viewBox="0 0 24 24" fill="currentColor">
         <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.342v21.316C0 23.4.6 24 1.325 24h11.494v-9.294H9.692v-3.622h3.127V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.466.099 2.797.143v3.24l-1.918.001c-1.504 0-1.796.716-1.796 1.765v2.315h3.59l-.467 3.622h-3.123V24h6.116C23.4 24 24 23.4 24 22.675V1.342C24 .6 23.4 0 22.675 0z"/>
       </svg>
