--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,7 @@
       </div>
 
       <!-- Google reCAPTCHA v2 Checkbox widget -->
-      <div class="g-recaptcha" data-sitekey="6LdCtosrAAAAAGddw60skAwbV91b2UmEAuLaSLYb
-"></div>
+      <div class="g-recaptcha" data-sitekey="6LdCtosrAAAAAGddw60skAwbV91b2UmEAuLaSLYb"></div>
 
       <button
         type="submit"
