--- a/blog.html
+++ b/blog.html
@@ -99,6 +99,14 @@
     </article>
   </main>
 
+   <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+      <img src="/assets/thumb-vendor.jpg" alt="Rural Cybersecurity" class="w-full h-auto" />
+      <div class="p-6">
+        <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/third_party_vendors.html">Why Rural Businesses Can’t Ignore Cybersecurity</a></h2>
+        <p class="text-gray-300 text-sm">Not all armadillos protect your data. Iron Dillo does.</p>
+      </div>
+    </article>
+  </main>
   <!-- Footer -->
   <footer class="bg-gray-800 text-gray-500 text-center p-6 text-sm mt-auto max-w-3xl mx-auto rounded-md">
     &copy; 2025 Iron Dillo. All rights reserved. |
