--- a/blog.html
+++ b/blog.html
@@ -100,7 +100,7 @@
   </main>
 
    <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-vendor.jpg" alt="Rural Cybersecurity" class="w-full h-auto" />
+      <img src="/assets/thumb-vendor.png" alt="Rural Cybersecurity" class="w-full h-auto" />
       <div class="p-6">
         <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/third_party_vendors.html">Why Rural Businesses Can’t Ignore Cybersecurity</a></h2>
         <p class="text-gray-300 text-sm">Not all armadillos protect your data. Iron Dillo does.</p>
